feat: about | Team and form adjustment

--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "@formspree/react": "^2.5.1",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
-    "react-svg": "^16.1.31"
+    "react-svg": "^16.1.31",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.53.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
